overflow fix

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -2,6 +2,18 @@ html, body {
   margin: 0;
   padding: 0;
   height: 100%;
+  overflow-x: hidden;
+  width: 100%;
+}
+
+*, *::before, *::after {
+  box-sizing: border-box;
+  outline: 1px solid red;
+}
+
+section, .content__item {
+  max-width: 100%;
+  overflow-x: hidden;
 }
 
 .container-main {
